# nano_autodiff

./: .gitignore  CMakeLists.txt  README.md
include/nano_ad/: forward.h  forward_scalar.h  nano_ad.h  test_common.h
src/: forward_scalar_test.cpp  test_autodiff.cpp  test_autodiff_dynamics.cpp  test_autodiff_local_parameterization.cpp
